# neon-zcp-rust-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
api/: .gitignore  Cargo.toml  README.md  zerops.yaml
api/migrations/: 001_create_tasks.sql
api/src/: main.rs  routes.rs
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  proxy.ts  start.sh  zerops.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/auth/[...path]/: route.ts
web/app/auth/: actions.ts
web/app/auth/sign-in/: page.tsx
web/app/auth/sign-up/: page.tsx
web/app/dashboard/: page.tsx
web/components/: ApiStatus.tsx  AuthForm.tsx  AuthNav.tsx  TasksPanel.tsx
web/lib/auth/: client.ts  server.ts
